<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="0"
        android:title="@string/home_label" />

    <item
        android:id="@+id/treeFragment"
        android:icon="@drawable/ic_menu_tree"
        android:orderInCategory="1"
        android:title="@string/tree_label" />

    <item
        android:id="@+id/wxOfficialFragment"
        android:icon="@drawable/ic_menu_weixin"
        android:orderInCategory="2"
        android:title="@string/wx_official_label" />

    <item
        android:id="@+id/projectFragment"
        android:icon="@drawable/ic_menu_project"
        android:orderInCategory="3"
        android:title="@string/project_label" />

    <item
        android:id="@+id/mineFragment"
        android:icon="@drawable/ic_menu_tree"
        android:orderInCategory="4"
        android:title="@string/mine_label" />

</menu>
