<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_margin_vertical">

    <LinearLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.cmj.wanandroid.lib.base.ui.MenuItemLayout
            android:id="@+id/userMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_vertical"
            app:menuItemIcon="@drawable/ic_message"
            app:menuItemText="@string/user_message_label" />

        <com.cmj.wanandroid.lib.base.ui.MenuItemLayout
            android:id="@+id/userStared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_vertical"
            app:menuItemIcon="@drawable/ic_star"
            app:menuItemText="@string/user_star_label" />

        <com.cmj.wanandroid.lib.base.ui.MenuItemLayout
            android:id="@+id/userShared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_margin_vertical"
            app:menuItemIcon="@drawable/ic_share"
            app:menuItemText="@string/user_share_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            style="@style/DefaultButtonStyle"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/logout_label" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/DefaultButtonStyle"
        android:layout_gravity="center"
        android:text="@string/login_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>