<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/register_title"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/usernameContainer"
        style="@style/LoginInputContainerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/passwordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/username_hint_tip"
            android:inputType="textVisiblePassword"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clearUsername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_input_clear"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordContainer"
        style="@style/LoginInputContainerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/rePasswordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameContainer">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/password_hint_tip"
            android:inputType="textPassword"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clearPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_input_clear"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rePasswordContainer"
        style="@style/LoginInputContainerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/rePassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/re_password_hint_tip"
            android:inputType="textPassword"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clearRePassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_input_clear"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        style="@style/DefaultButtonStyle"
        android:layout_marginBottom="116dp"
        android:text="@string/register_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>